# concurrent-image-blurrer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakelists.txt  README.md
src/: cli.h  cv2utils.cpp  cv2utils.h  cxxopts.h  getFiles.cpp  getFiles.h  main.cpp  read_directory.cpp  read_split_directory.cpp
tests/: README.md  async_test.cpp  checkForInputDir.cpp  cli_parser.cpp  fileSystemCheck.cpp  listDirectories.cpp  loadFiles.cpp  multi_thread.cpp  read_create_directories.cpp  single_thread.cpp  splitListByThread.cpp
tests/scripts/: async_test.sh  checkForInputDir.sh  cli_parser.sh  download_10_test_images.sh  download_128_test_images.sh  fileSystemCheck.sh  listDirectories.sh  read_create_directories.sh  single_thread.sh  splitListByThread.sh
